@@ -784,7 +784,8 @@ lr_has_multiple_gw_ports(const struct ovn_datapath *od)
 }
 
 bool
-is_vxlan_mode(const struct sbrec_chassis_table *sbrec_chassis_table);
+is_vxlan_mode(const struct smap *nb_options,
+              const struct sbrec_chassis_table *sbrec_chassis_table);
 
 uint32_t get_ovn_max_dp_key_local(bool _vxlan_mode);
 
